# patient-encounter-system

./: .bandit  .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  mems.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: d2e9ffd6786f_initial_tables.py
src/: database.py  main.py
src/models/: appointment.py  doctor.py  patient.py
src/schemas/: appointment.py  doctor.py  patient.py
src/services/: appointment_service.py  doctor_service.py  patient_service.py
tests/: conftest.py  test_appointments.py  test_datetime.py
